--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-elements": "^1.0.0",
+    "react-native-linear-gradient": "^2.5.3",
+    "react-native-router-flux": "^4.0.6",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
