--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.0.0",
     "react-native-linear-gradient": "^2.5.3",
+    "react-native-maps": "^0.23.0",
     "react-native-router-flux": "^4.0.6",
     "react-navigation": "^3.0.9"
   },
