--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-router-flux": "^4.0.6",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.0.9",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^32.0.0",
+    "redux-devtools": "^3.5.0",
+    "remote-redux-devtools": "^0.5.16"
   },
   "private": true
 }
