--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-router-flux": "^4.0.6",
+    "react-native-snackbar": "^0.5.5",
+    "react-native-snackbar-component": "^1.1.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
