--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@material-ui/core": "^3.9.1",
     "expo": "^32.0.0",
     "formik": "^1.4.3",
+    "laravel-echo": "^1.5.3",
     "prop-types": "^15.6.2",
+    "pusher-js": "^4.4.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.0.0",
