create a button after event for redirection on google maps

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-node_modules/**/*
-.expo/*
-npm-debug.*
-*.jks
-*.p12
-*.key
-*.mobileprovision
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+# dependencies
+/node_modules
