--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@mapbox/polyline": "^1.0.0",
     "@material-ui/core": "^3.9.1",
     "expo": "^32.0.0",
     "formik": "^1.4.3",
+    "geolib": "^2.0.24",
     "laravel-echo": "^1.5.3",
     "prop-types": "^15.6.2",
     "pusher-js": "^4.4.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.0.0",
+    "react-native-google-maps-directions": "^2.0.0",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
+    "react-native-maps-directions": "^1.6.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-snackbar": "^0.5.5",
     "react-native-snackbar-component": "^1.1.0",
