--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "formik": "^1.4.3",
     "geolib": "^2.0.24",
     "laravel-echo": "^1.5.3",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "pusher-js": "^4.4.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-animated-hide-view": "^1.0.0",
     "react-native-elements": "^1.0.0",
     "react-native-google-maps-directions": "^2.0.0",
+    "react-native-hideable-view": "^1.0.3",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-maps-directions": "^1.6.0",
@@ -33,6 +35,7 @@
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
+    "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
