--- a/app.json
+++ b/app.json
@@ -4,18 +4,17 @@
     "slug": "HeartbitApp",
     "privacy": "public",
     "sdkVersion": "32.0.0",
+    
+   
+    
     "platforms": [
       "ios",
       "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
+
+ 
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -23,10 +22,55 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "HeartBit.App"
     },
     "android": {
-      "package": "HeartBit.App"
+      
+      "package": "com.HeartBit.App",
+      "versionCode":1,
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "CAMERA",
+        "MANAGE_DOCUMENTS",
+        "READ_CONTACTS",
+        "READ_CALENDAR",
+        "WRITE_CALENDAR",
+        "READ_EXTERNAL_STORAGE",
+        "READ_PHONE_STATE",
+        "RECORD_AUDIO",
+        "USE_FINGERPRINT",
+        "VIBRATE",
+        "WAKE_LOCK",
+        "WRITE_EXTERNAL_STORAGE",
+        "com.anddoes.launcher.permission.UPDATE_COUNT",
+        "com.android.launcher.permission.INSTALL_SHORTCUT",
+        "com.google.android.c2dm.permission.RECEIVE",
+        "com.google.android.gms.permission.ACTIVITY_RECOGNITION",
+        "com.google.android.providers.gsf.permission.READ_GSERVICES",
+        "com.htc.launcher.permission.READ_SETTINGS",
+        "com.htc.launcher.permission.UPDATE_SHORTCUT",
+        "com.majeur.launcher.permission.UPDATE_BADGE",
+        "com.sec.android.provider.badge.permission.READ",
+        "com.sec.android.provider.badge.permission.WRITE",
+        "com.sonyericsson.home.permission.BROADCAST_BADGE"
+      ],
+      "icon":"./app_launcher.png",
+      "splash": {
+        "resizeMode": "contain",
+        "backgroundColor": "#7D7D7D",
+  
+       
+        
+        "mdpi": "./app_launchermdpi.png",   
+        "hdpi": "./app_launcherhdpi.png",   
+        "xhdpi": "./app_launcherxhdpi.png", 
+        "xxhdpi": "./app_launcherxxhdpi.png",
+        "xxxhdpi": "./app_launcherxxxhdpi.png"
+      }
+
+     
     }
   }
 }
