--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mapbox/polyline": "^1.0.0",
     "@material-ui/core": "^3.9.1",
     "expo": "^32.0.0",
+    "firebase": "^5.9.0",
     "formik": "^1.4.3",
     "geolib": "^2.0.24",
     "laravel-echo": "^1.5.3",
@@ -29,6 +30,7 @@
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-maps-directions": "^1.6.0",
+    "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^4.0.6",
     "react-native-snackbar": "^0.5.5",
     "react-native-snackbar-component": "^1.1.0",
