emergency call button,profil edit dialogs initial commit

--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "pusher-js": "^4.4.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-animated-hide-view": "^1.0.0",
+    "react-native-dialog": "^5.5.0",
+    "react-native-dialog-input": "^1.0.7",
     "react-native-elements": "^1.0.0",
     "react-native-google-maps-directions": "^2.0.0",
     "react-native-hideable-view": "^1.0.3",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.23.0",
     "react-native-maps-directions": "^1.6.0",
+    "react-native-phone-call": "^1.0.9",
     "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^4.0.6",
     "react-native-snackbar": "^0.5.5",
