--- a/package.json
+++ b/package.json
@@ -35,16 +35,20 @@
     "react-native-maps-directions": "^1.6.0",
     "react-native-phone-call": "^1.0.9",
     "react-native-push-notification": "^3.1.2",
-    "react-native-router-flux": "^4.0.6",
+    "react-native-router-flux": "^3.38.0",
+    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-snackbar": "^0.5.5",
     "react-native-snackbar-component": "^1.1.0",
+    "react-native-switch-toggle": "^1.0.8",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "react-toggle-display": "^2.2.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "toggle-switch-react-native": "^2.0.2",
+    "yarn": "^1.15.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
