--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-animated-hide-view": "^1.0.0",
+    "react-native-animated-loader": "0.0.7",
     "react-native-dialog": "^5.5.0",
     "react-native-dialog-input": "^1.0.7",
     "react-native-elements": "^1.0.0",
     "react-native-google-maps-directions": "^2.0.0",
     "react-native-hideable-view": "^1.0.3",
+    "react-native-image-picker": "^0.28.1",
     "react-native-linear-gradient": "^2.5.3",
+    "react-native-loader": "^1.2.1",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "^0.23.0",
     "react-native-maps-directions": "^1.6.0",
     "react-native-phone-call": "^1.0.9",
