--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-animated-loader": "0.0.7",
     "react-native-dialog": "^5.5.0",
     "react-native-dialog-input": "^1.0.7",
+    "react-native-dropdownalert": "^3.10.0",
     "react-native-elements": "^1.0.0",
     "react-native-google-maps-directions": "^2.0.0",
     "react-native-hideable-view": "^1.0.3",
@@ -37,7 +38,9 @@
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "^0.23.0",
     "react-native-maps-directions": "^1.6.0",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-phone-call": "^1.0.9",
+    "react-native-popup-dialog": "^0.18.2",
     "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^3.38.0",
     "react-native-scrollable-tab-view": "^0.10.0",
