--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-animated-hide-view": "^1.0.0",
     "react-native-animated-loader": "0.0.7",
+    "react-native-awesome-alerts": "^1.2.0",
     "react-native-dialog": "^5.5.0",
     "react-native-dialog-input": "^1.0.7",
     "react-native-dropdownalert": "^3.10.0",
@@ -41,6 +42,7 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-phone-call": "^1.0.9",
     "react-native-popup-dialog": "^0.18.2",
+    "react-native-progress": "^3.6.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^3.38.0",
     "react-native-scrollable-tab-view": "^0.10.0",
